// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TUI inline tool wrapping snapshots consecutive grep, glob, and read rows at a narrow width 1`] = `
"✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
  *dir|xdg|APPDATA" in packages/miao/src (151 matches)

✱ Glob "**/*db*" in packages/miao (6 matches)
→ Read packages/miao/src/storage/db.ts [offset=1, limit=130]
→ Read packages/miao/src/index.ts [offset=1, limit=100]
✱ Grep "export const MIAO_DB|MIAO_DB|MIAO_DEV|Global\\.Path\\.data|data ="
  in packages/miao/src (115 matches)"
`;

exports[`TUI inline tool wrapping snapshots expanded tool errors under the tool text 1`] = `
"✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
  *dir|xdg|APPDATA" in packages/miao/src (151 matches)

✱ Glob "**/*db*" in packages/miao (6 matches)
→ Read packages/miao/src/storage/db.ts [offset=1, limit=130]
→ Read packages/miao/src/index.ts [offset=1, limit=100]
  No LSP server available for this file type.

✱ Grep "export const MIAO_DB|MIAO_DB|MIAO_DEV|Global\\.Path\\.data|data ="
  in packages/miao/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a shell output block 1`] = `
"

  $ ls

  file.ts

✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
  *dir|xdg|APPDATA" in packages/miao/src (151 matches)

✱ Glob "**/*db*" in packages/miao (6 matches)
→ Read packages/miao/src/storage/db.ts [offset=1, limit=130]
→ Read packages/miao/src/index.ts [offset=1, limit=100]
✱ Grep "export const MIAO_DB|MIAO_DB|MIAO_DEV|Global\\.Path\\.data|data ="
  in packages/miao/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a padded user message 1`] = `
"
  Check whether the next tool remains separated.


✱ Grep "OPENCODE.*DB|database|sqlite|drizzle|dev.*db|data.
  *dir|xdg|APPDATA" in packages/miao/src (151 matches)

✱ Glob "**/*db*" in packages/miao (6 matches)
→ Read packages/miao/src/storage/db.ts [offset=1, limit=130]
→ Read packages/miao/src/index.ts [offset=1, limit=100]
✱ Grep "export const MIAO_DB|MIAO_DB|MIAO_DEV|Global\\.Path\\.data|data ="
  in packages/miao/src (115 matches)"
`;

exports[`TUI inline tool wrapping separates after a multi-line task row 1`] = `
"✱ Grep "Task" (2 matches)

⠙ Explore Task — Inspect active task spacing
  ↳ Reading src/a.ts
  ↳ Running bun test · 4s
  … ctrl+x enter expand

✓ General Task — Confirm completed task spacing
  ↳ 501ms · Confirmed the spacing"
`;

exports[`TUI inline tool wrapping separates a task row from a preceding inline detail 1`] = `
"→ Read src/cli/cmd/tui/routes/session/index.tsx
   ↳ Loaded src/cli/cmd/tui/routes/session/tools.tsx

✓ Explore Task — Inspect active task spacing
  ↳ 501ms · Inspected the spacing"
`;

exports[`TUI inline tool wrapping separates an inline row from the previous assistant summary 1`] = `
"   ▣ Build · Little Frank · 53.1s

✓ Build Task — Review changes
  ↳ 1m 40s · Reviewed the changes"
`;

exports[`TUI inline tool wrapping separates an inline row from the previous assistant error 1`] = `
"│
│  Managed inference requires an active Member plan
│

✓ Build Task — Review changes
  ↳ 1m 40s · Reviewed the changes"
`;
